changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Update Man Page
Brendan Lally 2010-05-07

Add -mq as a command line option to dump a list of the quests that the
server recognises.
Brendan Lally 2010-05-07

Improve dialog system. Use "You" for the player saying something.
Don't send multiple texts when @reply is used in dialogs.
Nicolas Weeger 2010-05-06

Include -mexp as one of the command line options listed in the help text.
Brendan Lally 2010-05-06

Doxygen fixes.
Nicolas Weeger 2010-05-06

Make parameters and return values const when applicable.
Nicolas Weeger 2010-05-06

Extract artifact functions to their own file.
Nicolas Weeger 2010-05-06

Don't send warnings on the server log from the DM's 'create' command.
Nicolas Weeger 2010-05-06

Make proto.
Nicolas Weeger 2010-05-06

ANSI C89 fix.
 server/quest.c
Nicolas Weeger 2010-05-04

server/player.c: don't switch to account mode if no account name (else segfault).
This could happen if the client sends the setup command but starts playing without
actually logging in.
Nicolas Weeger 2010-05-01

Enforce 2 characters minimum for account passwords, else accounts with 1
character can't create new characters. Some code cleaning.
 socket/request.c
Nicolas Weeger 2010-05-01

server/account_char.c: Modify to use the map name, not path for character
    listing if that data is available - gives nicer output.
socket/request.c: Add numeric face number for character information, add
    standard handling to send face number to client before use.
test/unit/common/check_living.c: Minor change to make it C89 compliant.
MSW 2010-04-26
